--- a/NetShopeWeb/Views/Home/Index.cshtml
+++ b/NetShopeWeb/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "IsDB-BISEW MVC Project";
+    ViewBag.Title = "NETSHOPNEXUS MVC Project";
     Layout = "~/Views/Shared/_Layout1.cshtml";
   }
 
