--- a/NetShopeWeb/Views/ThankYou/Thankyou.cshtml
+++ b/NetShopeWeb/Views/ThankYou/Thankyou.cshtml
@@ -11,7 +11,7 @@
                 <div class="aa-error-area">
                     <h2>Thank You</h2>
                     <span>Your Order was completed Successfully.</span>
-                    <p>IsDB-BISEW Your Trusted Online Shop.</p>
+                    <p>NETSHOPNEXUS Your Trusted Online Shop.</p>
                     <a href="@Url.Action("Index","Home")"> Go to Homepage</a>
                 </div>
             </div>
